src/snapshots/may_i__cmd_check__tests__check_report_render_text_verbose.snap
---
source: src/cmd_check.rs
assertion_line: 391
expression: output
---

Warnings

  WARN Test warning
       /test/config.yaml:5
       help: This is a test
  PASS ls → allow
  FAIL rm -rf / → deny (expected allow)


─── ✗ rm -rf / ─────────────────────────────────────────────────────────────────

/test/config.yaml:20
  expected │ :allow
  actual   │ :deny
  context  │ interactive, user=test
  reason   │ "Dangerous command"

  Trace

  ─── ✗ rm -rf / ───────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────

Summary

  ✗ 1 passed, 1 failed

  config: /test/config.yaml
