src/snapshots/may_i__cmd_check__tests__check_report_to_json.snap
---
source: src/cmd_check.rs
assertion_line: 406
expression: json_str
---
{
  "failed": 1,
  "passed": 1,
  "results": [
    {
      "actual": "allow",
      "command": "ls",
      "expected": "allow",
      "facts": {
        "interactive": true,
        "user": "test"
      },
      "location": "/test/config.yaml:10",
      "passed": true,
      "reason": null,
      "trace": [
        {
          "command": "ls",
          "decision": "allow",
          "type": "segment_header"
        }
      ]
    },
    {
      "actual": "deny",
      "command": "rm -rf /",
      "expected": "allow",
      "facts": {
        "interactive": true,
        "user": "test"
      },
      "location": "/test/config.yaml:20",
      "passed": false,
      "reason": "Dangerous command",
      "trace": [
        {
          "command": "rm -rf /",
          "decision": "deny",
          "type": "segment_header"
        }
      ]
    }
  ],
  "warnings": [
    {
      "help": "This is a test",
      "location": "/test/config.yaml:5",
      "message": "Test warning"
    }
  ]
}
